--- a/Empire-S1API/Empire-S1API.csproj
+++ b/Empire-S1API/Empire-S1API.csproj
@@ -185,6 +185,6 @@
 	
 	<Target Name="PostBuild" AfterTargets="Build">
 		<Copy SourceFiles="$(TargetDir)Empire-S1API.dll" DestinationFolder="C:\Program Files (x86)\Steam\steamapps\common\Schedule I_MONO\Mods\" />
-		<Copy SourceFiles="$(TargetDir)Empire-S1API.dll" DestinationFolder="C:\Program Files (x86)\Steam\steamapps\common\Schedule I_Main_IL2CPP\Mods\" />
+		<Copy SourceFiles="$(TargetDir)Empire-S1API.dll" DestinationFolder="C:\Program Files (x86)\Steam\steamapps\common\Schedule I\Mods\" />
 	</Target>
 </Project>
